Updates and tests
